feat: add onboaring

--- a/src/lib/i18n/locales/ar.json
+++ b/src/lib/i18n/locales/ar.json
@@ -781,6 +781,51 @@
     "timetable_p1": "في صفحة الجدول الزمني، اضغط (أو انقر) على فصل للوصول إلى مزيد من التفاصيل -- ثم اضغط على زر اللوحة لتلوين جدولك الزمني.",
     "modal_aria_label": "نافذة بوابة الترحيب"
   },
+  "setup_assistant": {
+    "aria_label": "مساعد الإعداد",
+    "skip": "تخطي",
+    "welcome_title": "مرحباً بك في DesQTA",
+    "welcome_subtitle": "جرّب SEQTA Learn بشكل جديد. تطبيق سطح مكتب قوي وحديث للطلاب.",
+    "get_started": "ابدأ",
+    "language_title": "اختر لغتك",
+    "language_subtitle": "حدد اللغة المفضلة للتطبيق.",
+    "continue": "متابعة",
+    "login_title": "كيفية تسجيل الدخول",
+    "login_desktop": "يمكنك تسجيل الدخول باستخدام رمز QR، أو إدخال رابط SEQTA لمدرستك، أو اسم المستخدم وكلمة المرور.",
+    "login_mobile": "على الهاتف، امسح رمز QR من SEQTA Learn في متصفحك لتسجيل الدخول فوراً.",
+    "login_qr": "رمز QR",
+    "login_qr_desc": "المسح من SEQTA Learn",
+    "login_url": "رابط يدوي",
+    "login_url_desc": "أدخل رابط المدرسة",
+    "login_direct": "تسجيل دخول مباشر",
+    "login_direct_desc": "اسم المستخدم وكلمة المرور",
+    "ready_title": "كل شيء جاهز!",
+    "ready_subtitle": "سجّل الدخول لاستكشاف لوحة التحكم وأدوات الدراسة والمزيد.",
+    "sign_in": "تسجيل الدخول",
+    "step_indicator": "الخطوة {current} من {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "اعرض جدولك الزمني بطرق جديدة",
+    "step_timetable_desc": "التبديل بين عرض الأسبوع واليوم والشهر والقائمة.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "انتظر، جاري معالجة البيانات",
+    "analytics_crunching_desc": "بيانات درجاتك قيد المزامنة. لن يستغرق ذلك سوى لحظة.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "تصفح والبحث في جميع الطلاب",
     "failed_to_load": "فشل تحميل الطلاب",
