--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -709,6 +709,51 @@
     "timetable_p1": "Auf der Stundenplan-Seite tippen (oder klicken) Sie auf eine Klasse, um weitere Details zu erhalten – und tippen Sie dann auf die Palette-Schaltfläche, um Ihren Stundenplan zu färben.",
     "modal_aria_label": "Willkommens-Portal Modal"
   },
+  "setup_assistant": {
+    "aria_label": "Setup-Assistent",
+    "skip": "Überspringen",
+    "welcome_title": "Willkommen bei DesQTA",
+    "welcome_subtitle": "SEQTA Learn neu erleben. Eine leistungsstarke, moderne Desktop-App für Schüler.",
+    "get_started": "Loslegen",
+    "language_title": "Sprache wählen",
+    "language_subtitle": "Wählen Sie Ihre bevorzugte Sprache für die App.",
+    "continue": "Weiter",
+    "login_title": "So melden Sie sich an",
+    "login_desktop": "Anmeldung per QR-Code, durch Eingabe der SEQTA-URL Ihrer Schule oder mit Benutzername und Passwort.",
+    "login_mobile": "Auf dem Handy: Scannen Sie einen QR-Code von SEQTA Learn im Browser, um sich sofort anzumelden.",
+    "login_qr": "QR-Code",
+    "login_qr_desc": "Von SEQTA Learn scannen",
+    "login_url": "URL manuell",
+    "login_url_desc": "Schul-URL eingeben",
+    "login_direct": "Direkte Anmeldung",
+    "login_direct_desc": "Benutzername & Passwort",
+    "ready_title": "Alles bereit!",
+    "ready_subtitle": "Melden Sie sich an, um Ihr Dashboard, Lernwerkzeuge und mehr zu erkunden.",
+    "sign_in": "Anmelden",
+    "step_indicator": "Schritt {current} von {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Sehen Sie Ihren Stundenplan auf neue Weise",
+    "step_timetable_desc": "Wechseln Sie zwischen Wochen-, Tages-, Monats- und Listenansichten.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Einen Moment, wir werten die Daten aus",
+    "analytics_crunching_desc": "Ihre Notendaten werden synchronisiert. Das dauert nur einen Moment.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Durchsuchen und suchen Sie alle Schüler",
     "failed_to_load": "Schüler konnten nicht geladen werden",
