--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -715,6 +715,51 @@
     "timetable_p1": "On the timetable page, tap (or click) on a class to access more details -- and then tap the palette button to colour up your timetable.",
     "modal_aria_label": "Welcome Portal Modal"
   },
+  "setup_assistant": {
+    "aria_label": "Setup Assistant",
+    "skip": "Skip",
+    "welcome_title": "Welcome aboard DesQTA",
+    "welcome_subtitle": "Experience SEQTA Learn like never before. A powerful, modern desktop app fer students.",
+    "get_started": "Set sail",
+    "language_title": "Choose yer language",
+    "language_subtitle": "Select yer preferred language fer the app.",
+    "continue": "Continue",
+    "login_title": "How to sign in",
+    "login_desktop": "Ye can sign in usin' a QR code, by enterin' yer school's SEQTA URL, or with direct username an' password.",
+    "login_mobile": "On mobile, scan a QR code from SEQTA Learn in yer browser to sign in instantly.",
+    "login_qr": "QR Code",
+    "login_qr_desc": "Scan from SEQTA Learn",
+    "login_url": "Manual URL",
+    "login_url_desc": "Enter school URL",
+    "login_direct": "Direct Login",
+    "login_direct_desc": "Username & password",
+    "ready_title": "Ye be all set!",
+    "ready_subtitle": "Sign in to get started an' explore yer dashboard, study tools, an' more.",
+    "sign_in": "Sign in",
+    "step_indicator": "Step {current} of {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "View yer timetable in new ways",
+    "step_timetable_desc": "Switch between week, day, month, an' list views.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Hold on, crunchin' the numbers",
+    "analytics_crunching_desc": "Yer grade data be syncin'. This'll only take a moment.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Browse and search through all crew members aboard",
     "failed_to_load": "Failed to load ye crew manifest",
