--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -832,6 +832,51 @@
     "timetable_p1": "On the timetable page, tap (or click) on a class to access more details -- and then tap the palette button to colour up your timetable.",
     "modal_aria_label": "Welcome Portal Modal"
   },
+  "setup_assistant": {
+    "aria_label": "Setup Assistant",
+    "skip": "Skip",
+    "welcome_title": "Welcome to DesQTA",
+    "welcome_subtitle": "Experience SEQTA Learn like never before. A powerful, modern desktop app for students.",
+    "get_started": "Get Started",
+    "language_title": "Choose your language",
+    "language_subtitle": "Select your preferred language for the app.",
+    "continue": "Continue",
+    "login_title": "How to sign in",
+    "login_desktop": "You can sign in using a QR code, by entering your school's SEQTA URL, or with direct username and password.",
+    "login_mobile": "On mobile, scan a QR code from SEQTA Learn in your browser to sign in instantly.",
+    "login_qr": "QR Code",
+    "login_qr_desc": "Scan from SEQTA Learn",
+    "login_url": "Manual URL",
+    "login_url_desc": "Enter school URL",
+    "login_direct": "Direct Login",
+    "login_direct_desc": "Username & password",
+    "ready_title": "You're all set!",
+    "ready_subtitle": "Sign in to get started and explore your dashboard, study tools, and more.",
+    "sign_in": "Sign in",
+    "step_indicator": "Step {current} of {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "View Your Timetable in New Ways",
+    "step_timetable_desc": "Switch between week, day, month, and list views.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Hold on, crunching the numbers",
+    "analytics_crunching_desc": "Your grade data is syncing. This will only take a moment.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Browse and search through all students",
     "failed_to_load": "Failed to load students",
