--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -709,6 +709,51 @@
     "timetable_p1": "En la página del horario, toca (o haz clic) en una clase para acceder a más detalles, y luego toca el botón de la paleta para colorear tu horario.",
     "modal_aria_label": "Modal del Portal de Bienvenida"
   },
+  "setup_assistant": {
+    "aria_label": "Asistente de configuración",
+    "skip": "Omitir",
+    "welcome_title": "Bienvenido a DesQTA",
+    "welcome_subtitle": "Experimenta SEQTA Learn como nunca. Una aplicación de escritorio potente y moderna para estudiantes.",
+    "get_started": "Empezar",
+    "language_title": "Elige tu idioma",
+    "language_subtitle": "Selecciona tu idioma preferido para la aplicación.",
+    "continue": "Continuar",
+    "login_title": "Cómo iniciar sesión",
+    "login_desktop": "Puedes iniciar sesión con un código QR, ingresando la URL SEQTA de tu escuela, o con usuario y contraseña.",
+    "login_mobile": "En móvil, escanea un código QR desde SEQTA Learn en tu navegador para iniciar sesión al instante.",
+    "login_qr": "Código QR",
+    "login_qr_desc": "Escanear desde SEQTA Learn",
+    "login_url": "URL manual",
+    "login_url_desc": "Ingresar URL de la escuela",
+    "login_direct": "Inicio directo",
+    "login_direct_desc": "Usuario y contraseña",
+    "ready_title": "¡Todo listo!",
+    "ready_subtitle": "Inicia sesión para explorar tu panel, herramientas de estudio y más.",
+    "sign_in": "Iniciar sesión",
+    "step_indicator": "Paso {current} de {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Visualiza tu horario de nuevas formas",
+    "step_timetable_desc": "Cambia entre vistas de semana, día, mes y lista.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Espera, procesando datos",
+    "analytics_crunching_desc": "Tus calificaciones se están sincronizando. Solo un momento.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Navegar y buscar entre todos los estudiantes",
     "failed_to_load": "No se pudieron cargar los estudiantes",
