--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -712,6 +712,51 @@
     "timetable_p1": "Sur la page de l'emploi du temps, appuyez (ou cliquez) sur une classe pour accéder à plus de détails, puis appuyez sur le bouton de la palette pour colorer votre emploi du temps.",
     "modal_aria_label": "Modal du Portail de Bienvenue"
   },
+  "setup_assistant": {
+    "aria_label": "Assistant de configuration",
+    "skip": "Passer",
+    "welcome_title": "Bienvenue sur DesQTA",
+    "welcome_subtitle": "Découvrez SEQTA Learn comme jamais. Une application de bureau puissante et moderne pour les étudiants.",
+    "get_started": "Commencer",
+    "language_title": "Choisissez votre langue",
+    "language_subtitle": "Sélectionnez la langue de l'application.",
+    "continue": "Continuer",
+    "login_title": "Comment se connecter",
+    "login_desktop": "Connectez-vous via un QR code, en saisissant l'URL SEQTA de votre école, ou avec identifiant et mot de passe.",
+    "login_mobile": "Sur mobile, scannez un QR code depuis SEQTA Learn dans votre navigateur pour vous connecter instantanément.",
+    "login_qr": "QR Code",
+    "login_qr_desc": "Scanner depuis SEQTA Learn",
+    "login_url": "URL manuelle",
+    "login_url_desc": "Saisir l'URL de l'école",
+    "login_direct": "Connexion directe",
+    "login_direct_desc": "Identifiant et mot de passe",
+    "ready_title": "Tout est prêt !",
+    "ready_subtitle": "Connectez-vous pour accéder à votre tableau de bord, outils d'étude et plus encore.",
+    "sign_in": "Se connecter",
+    "step_indicator": "Étape {current} sur {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Visualisez votre emploi du temps de nouvelles façons",
+    "step_timetable_desc": "Basculez entre les vues semaine, jour, mois et liste.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Un instant, calcul en cours",
+    "analytics_crunching_desc": "Vos données de notes se synchronisent. Ce ne sera pas long.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Parcourir et rechercher parmi tous les étudiants",
     "failed_to_load": "Échec du chargement des étudiants",
