--- a/src/lib/i18n/locales/it.json
+++ b/src/lib/i18n/locales/it.json
@@ -786,6 +786,51 @@
     "timetable_p1": "Nella pagina dell'orario, tocca (o clicca) su una classe per accedere a più dettagli -- e poi tocca il pulsante della tavolozza per colorare il tuo orario.",
     "modal_aria_label": "Modale Portale di Benvenuto"
   },
+  "setup_assistant": {
+    "aria_label": "Assistente di configurazione",
+    "skip": "Salta",
+    "welcome_title": "Benvenuto in DesQTA",
+    "welcome_subtitle": "Vivi SEQTA Learn come mai prima. Un'app desktop potente e moderna per studenti.",
+    "get_started": "Inizia",
+    "language_title": "Scegli la tua lingua",
+    "language_subtitle": "Seleziona la lingua preferita per l'app.",
+    "continue": "Continua",
+    "login_title": "Come accedere",
+    "login_desktop": "Puoi accedere con un codice QR, inserendo l'URL SEQTA della tua scuola o con nome utente e password.",
+    "login_mobile": "Su mobile, scansiona un codice QR da SEQTA Learn nel browser per accedere istantaneamente.",
+    "login_qr": "Codice QR",
+    "login_qr_desc": "Scansiona da SEQTA Learn",
+    "login_url": "URL manuale",
+    "login_url_desc": "Inserisci URL della scuola",
+    "login_direct": "Accesso diretto",
+    "login_direct_desc": "Nome utente e password",
+    "ready_title": "Tutto pronto!",
+    "ready_subtitle": "Accedi per esplorare la dashboard, gli strumenti di studio e altro.",
+    "sign_in": "Accedi",
+    "step_indicator": "Passo {current} di {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Visualizza il tuo orario in nuovi modi",
+    "step_timetable_desc": "Passa tra le viste settimana, giorno, mese e elenco.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Attendi, elaborazione dati in corso",
+    "analytics_crunching_desc": "I tuoi voti si stanno sincronizzando. Solo un momento.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Sfoglia e cerca tutti gli studenti",
     "failed_to_load": "Impossibile caricare gli studenti",
