--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -709,6 +709,51 @@
     "timetable_p1": "時間割ページで、クラスをタップ（またはクリック）して詳細にアクセスし、次にパレットボタンをタップして時間割に色を付けます。",
     "modal_aria_label": "ウェルカムポータルモーダル"
   },
+  "setup_assistant": {
+    "aria_label": "セットアップアシスタント",
+    "skip": "スキップ",
+    "welcome_title": "DesQTAへようこそ",
+    "welcome_subtitle": "SEQTA Learnをこれまでにない形で体験。学生向けの強力でモダンなデスクトップアプリです。",
+    "get_started": "始める",
+    "language_title": "言語を選択",
+    "language_subtitle": "アプリで使用する言語を選択してください。",
+    "continue": "続ける",
+    "login_title": "サインイン方法",
+    "login_desktop": "QRコード、学校のSEQTA URLの入力、またはユーザー名とパスワードで直接サインインできます。",
+    "login_mobile": "モバイルでは、ブラウザのSEQTA LearnからQRコードをスキャンして即座にサインインできます。",
+    "login_qr": "QRコード",
+    "login_qr_desc": "SEQTA Learnからスキャン",
+    "login_url": "URLを手動入力",
+    "login_url_desc": "学校のURLを入力",
+    "login_direct": "直接ログイン",
+    "login_direct_desc": "ユーザー名とパスワード",
+    "ready_title": "準備完了！",
+    "ready_subtitle": "サインインしてダッシュボード、学習ツールなどを探索しましょう。",
+    "sign_in": "サインイン",
+    "step_indicator": "ステップ {current} / {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "新しい方法で時間割を見る",
+    "step_timetable_desc": "週、日、月、リストの表示を切り替えます。",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "少々お待ちください、データを処理中",
+    "analytics_crunching_desc": "成績データを同期しています。しばらくお待ちください。",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "すべての学生を閲覧・検索",
     "failed_to_load": "学生の読み込みに失敗しました",
