--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -781,6 +781,51 @@
     "timetable_p1": "시간표 페이지에서 수업을 탭(또는 클릭)하여 자세한 정보에 액세스한 다음 팔레트 버튼을 탭하여 시간표에 색상을 지정하세요.",
     "modal_aria_label": "환영 포털 모달"
   },
+  "setup_assistant": {
+    "aria_label": "설정 도우미",
+    "skip": "건너뛰기",
+    "welcome_title": "DesQTA에 오신 것을 환영합니다",
+    "welcome_subtitle": "SEQTA Learn을 새로운 방식으로 경험하세요. 학생을 위한 강력하고 현대적인 데스크톱 앱입니다.",
+    "get_started": "시작하기",
+    "language_title": "언어 선택",
+    "language_subtitle": "앱에서 사용할 언어를 선택하세요.",
+    "continue": "계속",
+    "login_title": "로그인 방법",
+    "login_desktop": "QR 코드, 학교 SEQTA URL 입력 또는 사용자 이름과 비밀번호로 로그인할 수 있습니다.",
+    "login_mobile": "모바일에서는 브라우저의 SEQTA Learn에서 QR 코드를 스캔하여 즉시 로그인하세요.",
+    "login_qr": "QR 코드",
+    "login_qr_desc": "SEQTA Learn에서 스캔",
+    "login_url": "URL 직접 입력",
+    "login_url_desc": "학교 URL 입력",
+    "login_direct": "직접 로그인",
+    "login_direct_desc": "사용자 이름 및 비밀번호",
+    "ready_title": "준비 완료!",
+    "ready_subtitle": "로그인하여 대시보드, 학습 도구 등을 탐색하세요.",
+    "sign_in": "로그인",
+    "step_indicator": "단계 {current} / {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "새로운 방식으로 시간표 보기",
+    "step_timetable_desc": "주, 일, 월, 목록 보기 간 전환합니다.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "잠시만요, 데이터 처리 중",
+    "analytics_crunching_desc": "성적 데이터를 동기화하고 있습니다. 잠시만 기다려 주세요.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "모든 학생 검색 및 탐색",
     "failed_to_load": "학생 목록을 불러오지 못했습니다",
