--- a/src/lib/i18n/locales/nl.json
+++ b/src/lib/i18n/locales/nl.json
@@ -781,6 +781,51 @@
     "timetable_p1": "On the timetable page, tap (or click) on a class to access more details -- and then tap the palette button to colour up your timetable.",
     "modal_aria_label": "Welcome Portal Modal"
   },
+  "setup_assistant": {
+    "aria_label": "Setup-assistent",
+    "skip": "Overslaan",
+    "welcome_title": "Welkom bij DesQTA",
+    "welcome_subtitle": "Ervaar SEQTA Learn zoals nooit tevoren. Een krachtige, moderne desktop-app voor studenten.",
+    "get_started": "Beginnen",
+    "language_title": "Kies je taal",
+    "language_subtitle": "Selecteer je voorkeurstaal voor de app.",
+    "continue": "Doorgaan",
+    "login_title": "Hoe in te loggen",
+    "login_desktop": "Log in met een QR-code, door de SEQTA-URL van je school in te voeren, of met gebruikersnaam en wachtwoord.",
+    "login_mobile": "Op mobiel: scan een QR-code van SEQTA Learn in je browser om direct in te loggen.",
+    "login_qr": "QR-code",
+    "login_qr_desc": "Scannen van SEQTA Learn",
+    "login_url": "Handmatige URL",
+    "login_url_desc": "School-URL invoeren",
+    "login_direct": "Direct inloggen",
+    "login_direct_desc": "Gebruikersnaam en wachtwoord",
+    "ready_title": "Alles klaar!",
+    "ready_subtitle": "Log in om je dashboard, studietools en meer te verkennen.",
+    "sign_in": "Inloggen",
+    "step_indicator": "Stap {current} van {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Bekijk je rooster op nieuwe manieren",
+    "step_timetable_desc": "Schakel tussen week-, dag-, maand- en lijstweergaven.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Even geduld, gegevens worden verwerkt",
+    "analytics_crunching_desc": "Je cijfers worden gesynchroniseerd. Dit duurt maar even.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Blader en zoek door alle studenten",
     "failed_to_load": "Studenten laden mislukt",
