--- a/src/lib/i18n/locales/pl.json
+++ b/src/lib/i18n/locales/pl.json
@@ -781,6 +781,51 @@
     "timetable_p1": "On the timetable page, tap (or click) on a class to access more details -- and then tap the palette button to colour up your timetable.",
     "modal_aria_label": "Welcome Portal Modal"
   },
+  "setup_assistant": {
+    "aria_label": "Asystent konfiguracji",
+    "skip": "Pomiń",
+    "welcome_title": "Witaj w DesQTA",
+    "welcome_subtitle": "Poznaj SEQTA Learn na nowo. Potężna, nowoczesna aplikacja dla uczniów.",
+    "get_started": "Rozpocznij",
+    "language_title": "Wybierz język",
+    "language_subtitle": "Wybierz preferowany język aplikacji.",
+    "continue": "Kontynuuj",
+    "login_title": "Jak się zalogować",
+    "login_desktop": "Zaloguj się przez kod QR, wpisując adres SEQTA swojej szkoły lub login i hasło.",
+    "login_mobile": "Na telefonie zeskanuj kod QR z SEQTA Learn w przeglądarce, aby zalogować się natychmiast.",
+    "login_qr": "Kod QR",
+    "login_qr_desc": "Skanuj z SEQTA Learn",
+    "login_url": "Adres ręcznie",
+    "login_url_desc": "Wpisz adres szkoły",
+    "login_direct": "Bezpośrednie logowanie",
+    "login_direct_desc": "Login i hasło",
+    "ready_title": "Wszystko gotowe!",
+    "ready_subtitle": "Zaloguj się, aby poznać panel, narzędzia do nauki i więcej.",
+    "sign_in": "Zaloguj się",
+    "step_indicator": "Krok {current} z {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Przeglądaj plan lekcji na nowe sposoby",
+    "step_timetable_desc": "Przełączaj między widokami tygodnia, dnia, miesiąca i listy.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Poczekaj, przetwarzanie danych",
+    "analytics_crunching_desc": "Twoje oceny są synchronizowane. To potrwa tylko chwilę.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Przeglądaj i wyszukuj wszystkich uczniów",
     "failed_to_load": "Nie udało się załadować uczniów",
