--- a/src/lib/i18n/locales/pt.json
+++ b/src/lib/i18n/locales/pt.json
@@ -786,6 +786,51 @@
     "timetable_p1": "Na página do horário, toque (ou clique) em uma aula para acessar mais detalhes -- e então toque no botão da paleta para colorir seu horário.",
     "modal_aria_label": "Modal do Portal de Boas-Vindas"
   },
+  "setup_assistant": {
+    "aria_label": "Assistente de configuração",
+    "skip": "Pular",
+    "welcome_title": "Bem-vindo ao DesQTA",
+    "welcome_subtitle": "Experimente o SEQTA Learn como nunca. Um aplicativo de desktop poderoso e moderno para estudantes.",
+    "get_started": "Começar",
+    "language_title": "Escolha seu idioma",
+    "language_subtitle": "Selecione seu idioma preferido para o aplicativo.",
+    "continue": "Continuar",
+    "login_title": "Como entrar",
+    "login_desktop": "Você pode entrar usando um código QR, digitando a URL SEQTA da sua escola ou com usuário e senha.",
+    "login_mobile": "No celular, escaneie um código QR do SEQTA Learn no seu navegador para entrar instantaneamente.",
+    "login_qr": "Código QR",
+    "login_qr_desc": "Escanear do SEQTA Learn",
+    "login_url": "URL manual",
+    "login_url_desc": "Digitar URL da escola",
+    "login_direct": "Login direto",
+    "login_direct_desc": "Usuário e senha",
+    "ready_title": "Tudo pronto!",
+    "ready_subtitle": "Entre para explorar seu painel, ferramentas de estudo e muito mais.",
+    "sign_in": "Entrar",
+    "step_indicator": "Passo {current} de {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Visualize sua agenda de novas formas",
+    "step_timetable_desc": "Mude entre as visualizações de semana, dia, mês e lista.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Aguarde, processando os dados",
+    "analytics_crunching_desc": "Seus dados de notas estão sincronizando. Só um momento.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Navegue e pesquise todos os alunos",
     "failed_to_load": "Falha ao carregar alunos",
