--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -786,6 +786,51 @@
     "timetable_p1": "На странице расписания нажмите (или щелкните) на класс, чтобы получить больше деталей — а затем нажмите кнопку палитры, чтобы раскрасить свое расписание.",
     "modal_aria_label": "Модальное окно портала приветствия"
   },
+  "setup_assistant": {
+    "aria_label": "Помощник настройки",
+    "skip": "Пропустить",
+    "welcome_title": "Добро пожаловать в DesQTA",
+    "welcome_subtitle": "Оцените SEQTA Learn по-новому. Мощное современное приложение для учащихся.",
+    "get_started": "Начать",
+    "language_title": "Выберите язык",
+    "language_subtitle": "Выберите предпочитаемый язык приложения.",
+    "continue": "Продолжить",
+    "login_title": "Как войти",
+    "login_desktop": "Войти можно по QR-коду, введя URL SEQTA вашей школы или логин и пароль.",
+    "login_mobile": "На мобильном устройстве отсканируйте QR-код из SEQTA Learn в браузере для мгновенного входа.",
+    "login_qr": "QR-код",
+    "login_qr_desc": "Сканировать из SEQTA Learn",
+    "login_url": "URL вручную",
+    "login_url_desc": "Введите URL школы",
+    "login_direct": "Прямой вход",
+    "login_direct_desc": "Логин и пароль",
+    "ready_title": "Всё готово!",
+    "ready_subtitle": "Войдите, чтобы изучить панель управления, инструменты для учёбы и многое другое.",
+    "sign_in": "Войти",
+    "step_indicator": "Шаг {current} из {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Просматривайте расписание по-новому",
+    "step_timetable_desc": "Переключайтесь между представлениями недели, дня, месяца и списка.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Подождите, обрабатываем данные",
+    "analytics_crunching_desc": "Ваши оценки синхронизируются. Это займёт всего мгновение.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Просматривайте и ищите всех учеников",
     "failed_to_load": "Не удалось загрузить учеников",
