--- a/src/lib/i18n/locales/tr.json
+++ b/src/lib/i18n/locales/tr.json
@@ -781,6 +781,51 @@
     "timetable_p1": "On the timetable page, tap (or click) on a class to access more details -- and then tap the palette button to colour up your timetable.",
     "modal_aria_label": "Welcome Portal Modal"
   },
+  "setup_assistant": {
+    "aria_label": "Kurulum Asistanı",
+    "skip": "Atla",
+    "welcome_title": "DesQTA'ya Hoş Geldiniz",
+    "welcome_subtitle": "SEQTA Learn'i yeni bir şekilde deneyimleyin. Öğrenciler için güçlü, modern bir masaüstü uygulaması.",
+    "get_started": "Başla",
+    "language_title": "Dilinizi seçin",
+    "language_subtitle": "Uygulama için tercih ettiğiniz dili seçin.",
+    "continue": "Devam",
+    "login_title": "Nasıl giriş yapılır",
+    "login_desktop": "QR kod, okulunuzun SEQTA URL'si veya kullanıcı adı ve şifre ile giriş yapabilirsiniz.",
+    "login_mobile": "Mobilde, tarayıcınızdaki SEQTA Learn'den bir QR kod tarayarak anında giriş yapın.",
+    "login_qr": "QR Kod",
+    "login_qr_desc": "SEQTA Learn'den tara",
+    "login_url": "Manuel URL",
+    "login_url_desc": "Okul URL'si girin",
+    "login_direct": "Doğrudan Giriş",
+    "login_direct_desc": "Kullanıcı adı ve şifre",
+    "ready_title": "Hazırsınız!",
+    "ready_subtitle": "Panonuzu, çalışma araçlarınızı ve daha fazlasını keşfetmek için giriş yapın.",
+    "sign_in": "Giriş yap",
+    "step_indicator": "Adım {current} / {total}"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "Timetable'ınızı yeni şekillerde görüntüleyin",
+    "step_timetable_desc": "Hafta, gün, ay ve liste görünümleri arasında geçiş yapın.",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "Bekleyin, veriler işleniyor",
+    "analytics_crunching_desc": "Not verileriniz senkronize ediliyor. Sadece bir an sürer.",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "Tüm öğrencileri gözden geçirin ve arayın",
     "failed_to_load": "Öğrenciler yüklenemedi",
