--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -709,6 +709,51 @@
     "timetable_p1": "在时间表页面上，点击（或单击）一个班级以访问更多详细信息，然后点击调色板按钮为时间表着色。",
     "modal_aria_label": "欢迎门户模态框"
   },
+  "setup_assistant": {
+    "aria_label": "设置助手",
+    "skip": "跳过",
+    "welcome_title": "欢迎使用 DesQTA",
+    "welcome_subtitle": "全新体验 SEQTA Learn。专为学生打造的强大现代桌面应用。",
+    "get_started": "开始",
+    "language_title": "选择语言",
+    "language_subtitle": "选择应用的首选语言。",
+    "continue": "继续",
+    "login_title": "如何登录",
+    "login_desktop": "您可以使用二维码、输入学校的 SEQTA URL，或直接使用用户名和密码登录。",
+    "login_mobile": "在手机上，从浏览器中的 SEQTA Learn 扫描二维码即可立即登录。",
+    "login_qr": "二维码",
+    "login_qr_desc": "从 SEQTA Learn 扫描",
+    "login_url": "手动输入 URL",
+    "login_url_desc": "输入学校 URL",
+    "login_direct": "直接登录",
+    "login_direct_desc": "用户名和密码",
+    "ready_title": "准备就绪！",
+    "ready_subtitle": "登录以开始探索您的仪表板、学习工具等。",
+    "sign_in": "登录",
+    "step_indicator": "第 {current} 步，共 {total} 步"
+  },
+  "onboarding": {
+    "step_dashboard_title": "Your Dashboard",
+    "step_dashboard_desc": "Customize widgets, add shortcuts, pick templates. Your command center.",
+    "step_study_title": "AI Study Tools",
+    "step_study_desc": "Generate quizzes from assessments, use flashcards, take notes.",
+    "step_analytics_title": "Track Your Progress",
+    "step_analytics_desc": "See grade trends and performance over time.",
+    "step_timetable_title": "以新方式查看时间表",
+    "step_timetable_desc": "在周、日、月、列表视图之间切换。",
+    "step_theme_title": "Make It Yours",
+    "step_theme_desc": "Themes, accent colors, dark mode.",
+    "step_cloud_title": "Sync Across Devices",
+    "step_cloud_desc": "Keep data in sync on all your devices.",
+    "step_profile_title": "Your Profile",
+    "step_profile_desc": "Account, preferences, and more.",
+    "step_x_of_y": "Step {current} of {total}",
+    "analytics_crunching": "请稍候，正在处理数据",
+    "analytics_crunching_desc": "您的成绩数据正在同步，请稍候片刻。",
+    "skip_tour": "Skip tour",
+    "next": "Next",
+    "finish": "Finish"
+  },
   "directory": {
     "description": "浏览和搜索所有学生",
     "failed_to_load": "加载学生失败",
